# x86-compiler

./: .gitignore  CMakeLists.txt  Makefile  README.md  compiler  input.ion  input.txt  main.cpp  main.cpp.autosave  output.asm  output.txt  run.sh
ast/: Assign.h  Call.h  Constant.h  Expr.h  ExprOp.h  FuncArg.h  FuncDef.h  Id.h  If.h  Operand.h  SizeType.h  VarDef.h  assign.h  ast.cpp  ast.h  call.h  constant.cpp  constant.h  expr.h  exprOp.h  funcArg.h  funcDef.h  id.h  if.h  operand.h  stmt.h  varAssign.h  varDef.h
backend/: AsmValue.h  Compiler.cpp  Compiler.h  Emitter.cpp  Emitter.h  Label.h  Reg.cpp  Reg.h  SizeType.h  TypeSystem.cpp  TypeSystem.h  reg.h
backend/scope/: FunctionTable.cpp  FunctionTable.h  Scope.cpp  Scope.h  Symbol.h  SymbolTable.cpp  SymbolTable.h
backend/win/: SysCall.cpp  SysCall.h
backend/x86/: AsmOperand.cpp  AsmOperand.h  AsmValue.h  Compiler.cpp  Compiler.h  Emitter.cpp  Emitter.h  FunctionSignature.cpp  FunctionSignature.h  Label.h  Reg.cpp  Reg.h  SizeType.h  TypeSystem.cpp  TypeSystem.h  Types.cpp  Types.h  compiler.cpp  compiler.h  emitter.cpp  emitter.h  emmiter.cpp  emmiter.h  reg.cpp  reg.h
backend/x86/scope/: FunctionTable.cpp  FunctionTable.h  Scope.h  Symbol.h  SymbolTable.cpp  SymbolTable.h
frontend/: Ast.cpp  Ast.h  grammar.y  lex.l  lex.yy.c  parser.tab.c  parser.tab.h  parser.y
internal/: rt0.s
utils/: error.h  int2str.h
